[tool.poetry]
name = "thread-to-carousel"
version = "0.1.0"
description = ""
authors = ["DidierRLopes <dro.lopes@campus.fct.unl.pt>"]
readme = "README.md"
packages = [{include = "thread_to_carousel"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
pandas = "^1.5.0"
tweepy = "^4.10.1"
Pillow = "^9.2.0"
matplotlib = "^3.6.1"
emoji = "^2.1.0"
PyPDF2 = "^2.11.1"
python-dotenv = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
